src/test/ui/regions/region-object-lifetime-in-coercion.stderr
error[E0621]: explicit lifetime required in the type of `v`
  --> $DIR/region-object-lifetime-in-coercion.rs:8:37
   |
LL | fn a(v: &[u8]) -> Box<dyn Foo + 'static> {
   |         ----- help: add explicit lifetime `'static` to the type of `v`: `&'static [u8]`
LL |     let x: Box<dyn Foo + 'static> = Box::new(v);
   |                                     ^^^^^^^^^^^ lifetime `'static` required

error[E0621]: explicit lifetime required in the type of `v`
  --> $DIR/region-object-lifetime-in-coercion.rs:14:5
   |
LL | fn b(v: &[u8]) -> Box<dyn Foo + 'static> {
   |         ----- help: add explicit lifetime `'static` to the type of `v`: `&'static [u8]`
LL |     Box::new(v)
   |     ^^^^^^^^^^^ lifetime `'static` required

error: cannot infer an appropriate lifetime
  --> $DIR/region-object-lifetime-in-coercion.rs:20:14
   |
LL | fn c(v: &[u8]) -> Box<dyn Foo> {
   |         ----- data with this lifetime...
...
LL |     Box::new(v)
   |     ---------^-
   |     |        |
   |     |        ...and is captured here
   |     ...is required to be `'static` by this...
   |
help: to permit non-static references in a `dyn Trait` value, you can add an explicit bound for the anonymous lifetime #1 defined on the function body at 17:1
   |
LL | fn c(v: &[u8]) -> Box<dyn Foo + '_> {
   |                               ^^^^

error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/region-object-lifetime-in-coercion.rs:24:14
   |
LL |     Box::new(v)
   |              ^
   |
note: first, the lifetime cannot outlive the lifetime `'a` as defined on the function body at 23:6...
  --> $DIR/region-object-lifetime-in-coercion.rs:23:6
   |
LL | fn d<'a,'b>(v: &'a [u8]) -> Box<dyn Foo+'b> {
   |      ^^
note: ...so that the expression is assignable
  --> $DIR/region-object-lifetime-in-coercion.rs:24:14
   |
LL |     Box::new(v)
   |              ^
   = note: expected `&[u8]`
              found `&'a [u8]`
note: but, the lifetime must be valid for the lifetime `'b` as defined on the function body at 23:9...
  --> $DIR/region-object-lifetime-in-coercion.rs:23:9
   |
LL | fn d<'a,'b>(v: &'a [u8]) -> Box<dyn Foo+'b> {
   |         ^^
note: ...so that the expression is assignable
  --> $DIR/region-object-lifetime-in-coercion.rs:24:5
   |
LL |     Box::new(v)
   |     ^^^^^^^^^^^
   = note: expected `std::boxed::Box<(dyn Foo + 'b)>`
              found `std::boxed::Box<dyn Foo>`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0495, E0621.
For more information about an error, try `rustc --explain E0495`.
